appache2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2
  labels:
    app: apache2
spec:
  replicas: 1 # Number of Instances of Your App
  selector: # the selector is for the deployment to know which pod's it owns, make sure to keep labels the same everywhere
    matchLabels:
      app: apache2
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
      - image: johanaxel007/shipping-challenge:latest # Pull custom apache2 image from hub.docker.com
        imagePullPolicy: Always # this will always check for a newer image when a pod starts, you can also set it to IfNotPresent so it only downloads it if not on disk already
        name: apache2 # name of the container, only used for you to know what is running
        ports:  
        - containerPort: 80 # this gives the port 80 the name apache2, it does not expose it to the outside world yet
          name: apache2
