appache2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache2
  labels:
    app: apache2
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 # port on the service IP
      targetPort: apache2 # port on the container, can also be a number
  selector:
    app: apache2
