appache2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apache2-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: shipping-challenge.local
      http:
        paths:
          - path: /
            backend:
              serviceName: apache2
              servicePort: 80
